custom hid driver, wheel emulation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+hid-asusmouse (0.2.0) jammy; urgency=high
+  * 0.2.0.
+ -- Kyoken <kyoken@kyoken.ninja>  Thu  2 Mar 19:33:35 MSK 2023
+
 hid-asusmouse (0.1.0) jammy; urgency=high
   * Initial.
  -- Kyoken <kyoken@kyoken.ninja>  Wed, 29 Jun 2022 20:27:51 +0300
